build: generate openapi on commit
